test/parser/Queries/syntax_errors/fail_K-ForExprWithout-18.xq
(:************** ne ************ eq *******foo*foo******* let *** where *******:) eq 
(:  for Test: K-ForExprWithout-18foo       where         foo      foo  foo   :)
(:  by: FransEnglich     $  foo   for     $      ne       let        where      ne :)
(:Date: 2006-10-05T18:29:37+02:00    $           eq        let    : eq )
(: Purpose: A for variable binding to the empty sequence. :)
(:**** $ ******foo*****foo***************** $ ******* ne ****************: let )
empty(for  eq $var in () return current-time())